# burndown-gitlab

./: LICENSE  README.md  config.json  flake.nix  index.html  issues.json  main.py  out  out.json  pyproject.toml  requirements.txt
