[tool.poetry]
name = "elibrary"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohttp = "3.8.3"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "22.2.0"
certifi = "2022.12.7"
charset-normalizer = "2.1.1"
contourpy = "1.0.7"
cycler = "0.11.0"
"discord.py" = "2.1.1"
fonttools = "4.38.0"
frozenlist = "1.3.3"
idna = "3.4"
kiwisolver = "1.4.4"
matplotlib = "3.6.3"
multidict = "6.0.4"
numpy = "1.24.2"
packaging = "23.0"
Pillow = "9.4.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
requests = "2.28.2"
six = "1.16.0"
urllib3 = "1.26.14"
yarl = "1.8.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
