[tool.poetry]
name = "elibrary"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.8.0"
requests = "^2.31.0"
dataclasses-json = "^0.6.1"
orjson = "^3.9.8"
plotly = "^5.17.0"
pandas = "^2.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
pylance = "^0.8.3"
notebook = "^7.0.4"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
